# rdl-resonant-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
board/: paper_proofreader.md
docs/: berry_keating_candidates.md  f2_residual_paper.aux  f2_residual_paper.out  f2_residual_paper.tex  quantum_docking_math_blueprint.md  quantum_preparation.md
paper/: extensions_master_en.tex  extensions_master_ko.tex
results/: .reflected  A_decomposition_77.txt  A_formula_highdeg_b35.txt  A_formula_independent_b37.txt  A_gap_correlation_c256.txt  A_height_scaling_c260.txt  A_scaling_law_212.txt  B42_partial_correlation_c258.txt  adj_corr_decomp_ALambda_c394.txt  adj_corr_decomp_c393.txt  agap_nn_bound_c382.txt  agap_nn_mechanism_c297.txt  alpha1_proof_c311.txt  alpha1_proof_scaling_c311b.txt  angle_at_zeros_inventory.txt  artin_s3_121.txt  artin_s3_precision_122.txt  artin_s3_sigma_kd2_207.txt  artin_s4_kappa_124.txt  artin_s4_standard_123.txt  artin_s5_kd2_209.txt  attenuation_mechanism_c282.txt  b68_eratio_determinant_c344.txt  basis_bandwidth_scaling.txt  blind_topology_c300.txt  blind_topology_c301.txt  blind_zero_prediction.txt  bundle_prediction_fp_monodromy.txt  c1_pair_correlation_215.txt  c1_scaling_c244.txt  c374_monodromy_proof_analysis.tex  capacity_indirect_evidence.txt  capacity_scaling.txt  cluster_physics_v2.txt  compare_fourier_modes.txt  complex_dirichlet_monodromy_c410.txt  complex_vector_readout.txt  critic_report_95_96.md  critic_report_98.md  cross_family_A_gap_c375.txt  (+244 more)
scripts/: A_asymptotic_c244.py  A_formula_highdeg_b35.py  A_formula_independent_b37.py  (+317 more)
(+174 files in other folders)
